--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "d3-dsv": "^2.0.0",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.197-rc.1",
     "passport-jwt": "^4.0.1",
