--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -44,6 +44,8 @@ jobs:
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
           echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "JWT_SECRET_KEY"=${{ secrets.JWT_SECRET_KEY }}" >> .env
+          echo "OPENAI_API_KEY"${{ secrets.OPENAI_API_KEY }}" >> .env
           cat .env
       - name: Run Docker
         run: |
