Fix: text parser

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
     "@types/passport": "^1.0.16",
@@ -35,7 +36,9 @@
     "class-validator": "^0.14.0",
     "d3-dsv": "^2.0.0",
     "hnswlib-node": "^1.4.2",
+    "install": "^0.13.0",
     "langchain": "^0.0.197-rc.1",
+    "npm": "^10.2.4",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
