--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-validator": "^0.14.0",
     "d3-dsv": "^2.0.0",
     "langchain": "^0.0.197-rc.1",
+    "hnswlib-node": "^1.4.2",
+    "install": "^0.13.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
